// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader15 Loader should render image avatar properly 1`] = `
<div>
  <div
    class="sc-gsTCUz eelQNL"
  >
    <div
      class="sc-bdfBwQ hKKOmu"
    />
  </div>
</div>
`;

exports[`Loader15 Loader should render with all the props given 1`] = `
<div>
  <div
    class="sc-gsTCUz DBHwP"
  >
    <div
      class="sc-bdfBwQ fSqboP"
    />
  </div>
</div>
`;

exports[`Loader15 Loader should render with default theme 1`] = `
<div>
  <div
    class="sc-gsTCUz iqVWtv"
  >
    <div
      class="sc-bdfBwQ hKKOmu"
    />
  </div>
</div>
`;
